cluster-configuration/apexalgo-iad/ai-code-battle/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-code-battle
  labels:
    app.kubernetes.io/name: ai-code-battle
