cluster-configuration/apexalgo-iad/ai-code-battle/acb-index-builder-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acb-index-builder
  namespace: ai-code-battle
  labels:
    app.kubernetes.io/name: acb-index-builder
    app.kubernetes.io/part-of: ai-code-battle
    app.kubernetes.io/component: index-builder
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: acb-index-builder
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: acb-index-builder
        app.kubernetes.io/part-of: ai-code-battle
        app.kubernetes.io/component: index-builder
    spec:
      containers:
        - name: index-builder
          image: forgejo.ardenone.com/ai-code-battle/acb-index-builder:latest
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
      restartPolicy: Always
