cluster-configuration/apexalgo-iad/ai-code-battle/acb-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: acb-api
  namespace: ai-code-battle
  labels:
    app.kubernetes.io/name: acb-api
    app.kubernetes.io/part-of: ai-code-battle
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: acb-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
